# mailing

./: .gitignore  Makefile  pyproject.toml
migration/: env.py
migration/versions/: 82c708da4410_init_table.py
src/: config.py  test.py
src/celdery/: celery.py  red.py  tasks.py
src/database/: models.py
src/mailing/: sending.py  tracking.py
